--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ body {
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
+    margin: 0;
     min-height: 100vh;
     min-width: 100vw;
+    padding: 0;
 }
 
 #clock {
@@ -13,15 +15,23 @@ body {
     color: white;
     font-family: sans-serif;
     font-size: 3rem;
+    margin-bottom: 1rem;
     padding: 1rem;
 }
 
+#container {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+}
+
 #controls button {
-    background-color: rgb(200, 200, 200);
-    border: none;
+    background-color: rgb(220, 220, 220);
+    border: 2px solid black;
     border-radius: 5px;
     cursor: pointer;
-    margin: 1rem;
-    padding: 0.5rem;
+    margin: 0.5rem;
+    padding: 0.75rem;
     width: 5rem;
 }
